# yt-watch-history-v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
api/: Dockerfile  app.py  pyproject.toml
api/src/: __init__.py  _utils.py  configs.py  connect_db.py
api/src/models/youtube/: __init__.py  channel_video.py  video.py
api/src/routes/: __init__.py
api/src/routes/db/: __init__.py
api/src/routes/db/youtube/: __init__.py  channel_video.py  video.py
api/src/routes/youtube/: __init__.py  video.py
frontend/: Dockerfile  app.py  pyproject.toml
frontend/pages/: CTT_Analysis.py  Fetch_Watch_History_Details.py  Upload_Data.py  Watch_History_Analysis.py
frontend/src/: configs.py  upload_data_validator.py
ml/: Dockerfile  app.py  pyproject.toml
ml/src/: configs.py  utils.py
ml/src/channel_reco/: __init__.py  api.py  data.py  model.py
ml/src/ctt/: api.py  data.py  model.py  prediction.py  training.py
