[project]
name = "ml"
version = "0.1.0"
authors = [
    { name = "Anshul Raj Verma", email = "111767754+arv-anshul@users.noreply.github.com" },
]
dependencies = [
    "fastapi[all]==0.111.0",
    "motor==3.4.0",
    "pymongo==4.7.2",
    "polars==0.20.31",
    "scikit-learn==1.5.0",
    "emoji==2.12.1",
    "joblib==1.4.2",
]
requires-python = ">=3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.ruff]
extend = "../pyproject.toml"
